<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FF0000">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/RZHD"
                android:src="@drawable/ic_train_white">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/string_SCBist"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20sp">
            </TextView>

            <TextView
                android:id="@+id/ready_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="170dp"
                android:gravity="center"
                android:clickable="true"
                android:textColor="@color/white"
                android:text="@string/ready"
                android:textSize="20sp"
                android:focusable="true">
            </TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/more"
                android:src="@drawable/ic_right">

            </ImageView>

        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/white"
            app:queryHint="@string/search"
            >

        </androidx.appcompat.widget.SearchView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRecycleView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:listitem="@layout/item_list_of_devices"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>