<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#FF0000"
        android:orientation="horizontal"
        android:gravity="end"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/string_SCBist"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginEnd="120dp"
            >
        </TextView>

        <ImageButton
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#FF0000"
            android:contentDescription="@string/logOut"
            android:minWidth="48dp"
            android:src="@drawable/icon_exit"
            tools:ignore="SpeakableTextPresentCheck">
        </ImageButton>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageButton
            android:id="@+id/btn_image_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@color/white"
            android:contentDescription="@string/logOn"
            android:src="@drawable/ic_train"
            android:layout_gravity="center">
        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_SCBist"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>

</LinearLayout>



