<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="25sp">
        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/searchviewdesign_background_red"
            app:queryHint="@string/search_not"
            android:theme="@style/ThemeOverlay.SearchView"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent">
        </androidx.appcompat.widget.SearchView>
    </LinearLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.yandex.mapkit.mapview.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.yandex.mapkit.mapview.MapView>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="#FF0000"
            android:text="@string/more"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck">

        </Button>

    </FrameLayout>



</LinearLayout>